# selectai_uis

./: .dockerignore  .gitignore  Dockerfile  PRD.md  README.md  design.md  docker-compose.yml  prompt.md  style.md
backend/: .env.example  pyproject.toml
backend/app/: __init__.py  config.py  errors.py  main.py
backend/app/data/o_home_shopping/: manifest.json  oracle_ddl.sql
backend/app/db/: __init__.py  local_store.py  oracle.py  pool_registry.py
backend/app/routers/: __init__.py  chat.py  clone.py  connections.py  dashboard.py  enrichment.py  meta.py  ohome.py  privileges.py  profiles.py  resources.py  schema.py  selectai.py  settings.py
backend/app/schemas/: __init__.py  models.py
backend/app/security/: __init__.py  crypto.py
backend/app/services/: __init__.py  attribute_catalog.py  clone_service.py  common.py  connection_service.py  conversation_service.py  enrichment_service.py  meta_service.py  ohome_service.py  prereq_service.py  profile_service.py  resource_service.py  schema_service.py  selectai_service.py
backend/seeds/: movie_comments.sql  movie_reset.sql  movie_schema.sql
backend/tests/: conftest.py  test_connections.py  test_health.py  test_selectai_core.py
design-output/: README.md
design-output/full-size/: README.md  render_responsibility_map.py  render_responsibility_venn.py
design-output/prototype/: capture-full.js  capture.js  (+1 more)
docs/: INDEX.md  api-spec.md  architecture.md  demo-scenarios.md  review-findings.md  security.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
scripts/: run.sh
(+37 files in other folders)
