[project]
name = "selectai-demo-studio-backend"
version = "0.1.0"
description = "Select AI Demo Studio — FastAPI 백엔드 (Oracle ADB 26ai Select AI 데모 도구)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "oracledb>=3.0",  # python-oracledb (thin) — PyPI 패키지명은 oracledb
    "cryptography>=44.0",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "python-multipart>=0.0.20",
    "httpx>=0.28",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6.0",
    "ruff>=0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
# 비동기 테스트 자동 인식 + 커버리지 대상은 app 패키지
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=app --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py312"
